# Mingl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
Archived/: READme
Archived/Clean Pipeline/: CleanHierarchicalFollicle_NoOutput.ipynb  READme
Archived/Intestine/: 20250404_Project2MixtureModel.ipynb  20250405_FollicleHierarchical_10clusters_NoOutput.ipynb
Clean Pipeline/: CleanCalculateCentroids.ipynb  CleanGMM_NoOutput.ipynb  CleanInvestigateBiology_NoOutput.ipynb  READme
Intestine/: 20250405_FollicleHierarchical_diffclusters_NoOutput.ipynb  READme
Melanoma/: 20250612_Calculate_Melanoma_Centroids.ipynb  READme
docs/: api.md  conf.py
docs/notebooks/: example.ipynb
src/MINGLE/: __init__.py
src/mingl/: __init__.py
src/mingl/pl/: __init__.py  _utils.py  cell_composition.py  cnd.py  dv.py  edges_pp.py  enrichment.py  gmm_plots.py  gvs.py  spatial_location_reg.py  spatial_probability_map.py  violin.py
src/mingl/tl/: __init__.py  ccd.py  centroids.py  crd.py  edges.py  gb.py  gmm.py  gmm_gpu.py  gmm_tmp.py  grad.py  gvs2.py  knn.py  n_neighbors.py  network_graphs.py  utils_adata.py
src/mingle/: __init__.py
src/mingle/pl/: _utils.py  cell_type_color_map.json  dpp.py  dv.py  edges_pp.py  enrichment.py  gvs.py  plt_dv.py  rnd.py  spatial_location_reg.py  spatial_probability_map.py  violin.py
src/mingle/pp/: __init__.py  preprocessing.py
src/mingle/tl/: __init__.py  ccd.py  compute_proportions.py  crd.py  gb.py  gmm.py  gmm_gpu.py  grad.py  gvs2.py  knn2.py  n_neighbors.py  network_graphs.py  testgvs.py
tests/: test_basic.py  test_gmm.py
tutorials/: fig2_intestine_neighborhood.ipynb  fig3_supp2.ipynb  fig3_supp2_multiplot.ipynb  fig5_supfig4_nb_plasma.ipynb  fig6_sup5.ipynb  prompt.txt
